tested rights enforcer for user
