# pkg/user/infra/app/server.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"github.com/byorty/enterprise-application/pkg/common/adapter/server/grpc"
 	pbv1 "github.com/byorty/enterprise-application/pkg/common/gen/api/proto/v1"
+	ordersrv "github.com/byorty/enterprise-application/pkg/order/domain/service"
 	usersrv "github.com/byorty/enterprise-application/pkg/user/domain/service"
 )
 
@@ -12,20 +13,35 @@ var _ pbv1.UserServiceServer = (*server)(nil)
 func NewFxUserServiceServer(
 	userService usersrv.UserService,
 	userProductService usersrv.UserProductService,
+	orderService ordersrv.OrderService,
 ) grpc.Descriptor {
 	return grpc.Descriptor{
 		Server: &server{
 			userService:        userService,
 			userProductService: userProductService,
+			orderService:       orderService,
 		},
 		GRPCRegistrar:        pbv1.RegisterUserServiceServer,
 		GRPCGatewayRegistrar: pbv1.RegisterUserServiceHandlerFromEndpoint,
+		MethodDescriptors: []grpc.MethodDescriptor{
+			{
+				Method:     (*server).Register,
+				Role:       pbv1.RoleUser,
+				Permission: pbv1.PermissionRead,
+			},
+			{
+				Method:     (*server).GetByUUID,
+				Role:       pbv1.RoleUser,
+				Permission: pbv1.PermissionRead,
+			},
+		},
 	}
 }
 
 type server struct {
 	userService        usersrv.UserService
 	userProductService usersrv.UserProductService
+	orderService       ordersrv.OrderService
 }
 
 func (s server) Register(ctx context.Context, request *pbv1.RegisterRequest) (*pbv1.User, error) {
@@ -55,4 +71,8 @@ func (s server) ChangeProduct(ctx context.Context, request *pbv1.ChangeProductRe
 	return &pbv1.UserProductsResponse{
 		Products: userProducts,
 	}, err
+}
+
+func (s *server) CreateOrder(ctx context.Context, request *pbv1.CreateOrderRequest) (*pbv1.Order, error) {
+	return s.orderService.Create(ctx, request.UserUuid, request.Params)
 }
